# libjapi

./: .clang-format  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  Doxyfile.in  Makefile  README.md
.github/workflows/: CMake.yml  package.yml  pages_static.yml
doxydir/: 1_getting_started.md  1_setup.md  1_usage.md  2_demo.md  2_examples.md  3_communication_concepts.md  3_usage.md  9_references.md  Doxyfile.in  demo.cpp  main.md  style.css  test.py
gitlab-ci/: Dockerfile  docker-build.sh  docker-upload.sh
include/: creadline.h  japi.h  japi_pushsrv.h  japi_utils.h  networking.h  rw_n.h
package/: create_rpm.sh  libjapi.repo  libjapi.spec
src/: creadline.c  japi.c  japi_intern.h  japi_pushsrv.c  japi_pushsrv_intern.h  japi_utils.c  networking.c  prntdbg.h  rw_n.c
test/: japi_test.cc
